# test-site

./: .bash_history  .build.env  .viminfo  .wget-hsts  QUIT  docker-compose.yml  exit  nginx.conf  quit  sudo apt-get update  sudo iptables -A INPUT -p tcp --dport 443 -j ACCEPT  udo docker network create MyNetwork
backend-v1.1.7.1/: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend-v1.1.7.1/api/: urls.py
backend-v1.1.7.1/bank/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend-v1.1.7.1/callback/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend-v1.1.7.1/career/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend-v1.1.7.1/django_app/: celery.py  urls.py
backend-v1.1.7.1/history/: admin.py  apps.py  inlines.py  models.py  serializers.py  urls.py  views.py
backend-v1.1.7.1/modules/: admin.py  apps.py  models.py  urls.py  views.py
backend-v1.1.7.1/news/: admin.py  apps.py  inline.py  models.py  paginators.py  serializers.py  signals.py  urls.py  views.py
backend-v1.1.7.1/notification/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend-v1.1.7.1/partners/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend-v1.1.7.1/project/: admin.py  apps.py  models.py  paginations.py  serializers.py  tasks.py  urls.py  views.py
backend-v1.1.7.1/runner/: django_run_celery.sh  django_run_celery_dzi.sh  django_run_celery_neuro.sh
backend-v1.1.7.1/setting/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend-v1.1.7.1/team/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+233 files in other folders)
